[!kraken] rename everything
