# api/http/openapi.yaml
@@ -19,7 +19,7 @@ paths:
 
   /news:
     get:
-      operationId: GetNews
+      operationId: GetNewses
       summary: Get news list
       description: Get the list of the news you can never rely on
       parameters:
@@ -46,7 +46,7 @@ paths:
                 type: array
                 items:
                   # TODO: add separated type for a list response items with no content included.
-                  $ref: "#/components/schemas/NewsItem"
+                  $ref: "#/components/schemas/News"
         default:
           $ref: "#/components/responses/DefaultError"
   /news/count:
@@ -73,7 +73,7 @@ paths:
           $ref: "#/components/responses/DefaultError"
   /news/item/{id}:
     get:
-      operationId: GetNewsItem
+      operationId: GetNews
       summary: Get news item
       description: Get single news item by its ID
       parameters:
@@ -89,7 +89,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/NewsItem"
+                $ref: "#/components/schemas/News"
         default:
           $ref: "#/components/responses/DefaultError"
 
@@ -163,7 +163,7 @@ components:
       required:
         - id
         - name
-    NewsItem:
+    News:
       type: object
       properties:
         id:
